# sodhi

./: .gitignore  CMakeLists.txt  compile_flags.txt
include/: commandpalette.h  config.h  dashboard.h  friend.h  landingpage.h  login.h  mainwindow.h  message.h  messagebubble.h  register.h  room.h  roomslayout.h  user.h
src/: commandpalette.cpp  config.cpp  dashboard.cpp  friend.cpp  landingpage.cpp  login.cpp  main.cpp  mainwindow.cpp  message.cpp  messagebubble.cpp  register.cpp  room.cpp  roomslayout.cpp  user.cpp
tests/: test_dashboard.cpp  test_login_register.cpp
